force-app/main/default/objects/B25__Form_Related_List__c/B25__Form_Related_List__c.object-meta.xml
<CustomObject>
    <description>Definition of a related list that is displayed on the reservation form.</description>
    <label>Related List</label>
    <nameField>
        <displayFormat>RL-{0}</displayFormat>
        <label>Related List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>