force-app/main/default/objects/B25__Form_Related_List__c/fields/B25__Field_Set__c.field-meta.xml
<CustomField>
    <fullName>B25__Field_Set__c</fullName>
    <description>These fields are shown on each row of the related list on the reservation form.</description>
    <inlineHelpText>Ces champs sont indiqués sur chaque ligne de la liste connexe du formulaire de réservation.</inlineHelpText>
    <label>Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>