force-app/main/default/objects/B25__Form_Related_List__c/fields/B25__Label__c.field-meta.xml
<CustomField>
    <fullName>B25__Label__c</fullName>
    <description>The label that wil be shown on the header of the section that contains this related list.
		When left empty the plural label of the related object is used.</description>
    <inlineHelpText>Le libellé qui sera affiché dans l’en-tête de la section qui contient cette liste connexe. Lorsqu’il est laissé vide, le libellé pluriel de l’objet connexe est utilisé.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>