force-app/main/default/objects/B25__Form_Related_List__c/fields/B25__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Relationship_Name__c</fullName>
    <description>Enter the API name of the child relationship. You can find this by going to the setup page for the reservation lookup on the child object.</description>
    <inlineHelpText>Saisissez le nom API de la relation enfant. Vous pouvez le trouver en allant sur la page de configuration de la recherche de réservation pour l’objet enfant.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>