force-app/main/default/objects/B25__Form_Related_List__c/fields/B25__Reservation_Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Lookup_API_Name__c</fullName>
    <description>The API name of the lookup from the child to Reservation. This value will be set automatically, no need to set it manually.</description>
    <inlineHelpText>Le nom de API de la recherche de l’enfant pour la réservation. Cette valeur sera définie automatiquement, il n’est pas nécessaire de la définir manuellement.</inlineHelpText>
    <label>Reservation Lookup API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>