force-app/main/default/objects/B25__Form_Related_List__c/fields/B25__Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Reservation Type this related list is displayed on.</description>
    <inlineHelpText>Le type de réservation sur lequel cette liste connexe est affichée.</inlineHelpText>
    <label>Reservation Type</label>
    <referenceTo>B25__Reservation_Type__c</referenceTo>
    <relationshipLabel>Related Lists</relationshipLabel>
    <relationshipName>Related_Lists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>