force-app/main/default/objects/B25__Form_Related_List__c/fields/B25__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__SObject_Type__c</fullName>
    <description>The SObject Type of records in this list. This value will be set automatically, no need to set it manually.</description>
    <inlineHelpText>Le type de SObjet des enregistrements dans cette liste. Cette valeur sera définie automatiquement, il n’est pas nécessaire de la définir manuellement.</inlineHelpText>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>